--- a/src/views/Dashboard/Dashboard.css
+++ b/src/views/Dashboard/Dashboard.css
@@ -65,7 +65,9 @@ input {
   outline: none;
 }
 
-
+.inputButton:disabled {
+  opacity: 0.3;
+}
 
 .side-bar {
     border-right: 2px solid #ebedf2;
@@ -73,4 +75,19 @@ input {
     color: #fff;
     max-width: 20%;
     height: 100vh;
+}
+
+.alert-error {
+  width: 80%;
+  margin: auto;
+}
+
+.url-error {
+  width: 80%;
+  /* text-align: center; */
+  font-size: 0.7rem;
+  margin-top: -15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 10px;
 }
