--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,16 @@
 
 .app-container {
-  background-color: #f5f5f8;
+  background-color: #ffffff;
+  /* background-color: #f5f5f8; */
 }
 
 .page-container {
   margin-top: 40px;
+}
+
+@media only screen and (max-width: 768px) {
+.page-container {
+  width: 90%;
+  margin-top: 70px;
+}
 }
