--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -1,7 +1,74 @@
 .sidebar-link a {
-    color: #ffffff;
+  color: #ffffff;
 }
 .sidebar-link {
-    padding-left: 20px;
-    margin-bottom: 20px;
+  padding-left: 20px;
+  margin-bottom: 20px;
+}
+
+.side-bar {
+  border-right: 2px solid #ebedf2;
+  background-color: #3cc;
+  color: #fff;
+  /* max-width: 100%; */
+  height: 100vh;
+  width: 0;
+  transition: 0.5s;
+}
+
+.open-side-bar {
+  width: 100%;
+  border-right: 2px solid #ebedf2;
+  background-color: #3cc;
+  color: #fff;
+  height: 100vh;
+  transition: 0.5s;
+}
+
+.display-none {
+  display: none;
+}
+
+.close-btn {
+  font-size: 40px;
+  margin-right: 15px;
+  margin-top: 5px;
+}
+
+.bars-container {
+  margin-right: 10px;
+  margin-top: 5px;
+  position: absolute;
+  right: 5%;
+  top: 2%;
+}
+
+.bars {
+  width: 41px;
+  background: #000000;
+  height: 10px;
+  margin-bottom: 5px;
+}
+
+@media only screen and (min-width: 768px) {
+  .side-bar {
+    max-width: 20%;
+    position: unset;
+    width: 20%;
+  }
+  .bars-container {
+      display: none;
+  }
+  .close-btn {
+      display: none;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .mobile-header {
+    justify-content: space-between;
+  }
+  .open-side-bar {
+    position: fixed;
+    z-index: 9999;
+  }
 }
