--- a/src/views/Dashboard/Dashboard.css
+++ b/src/views/Dashboard/Dashboard.css
@@ -1,7 +1,7 @@
 .form-container {
   padding: 10px;
-  margin: 50px auto;
-  width: 50%;
+  /* margin: 50px auto;
+  width: 50%; */
   background-color: #fff;
   /* -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); */
@@ -37,7 +37,6 @@ input {
   -webkit-box-shadow: 0 0 0 1000px white inset;
 }
 
-
 .inputButton {
   position: relative;
   width: 85%;
@@ -45,17 +44,17 @@ input {
   display: block;
   margin: 30px auto 30px;
   color: white;
-  background-color: #3CC;
+  background-color: #3cc;
   border: none;
-  -webkit-box-shadow: 0 5px 0 #2CADAD;
-  -moz-box-shadow: 0 5px 0 #2CADAD;
-  box-shadow: 0 5px 0 #2CADAD;
+  -webkit-box-shadow: 0 5px 0 #2cadad;
+  -moz-box-shadow: 0 5px 0 #2cadad;
+  box-shadow: 0 5px 0 #2cadad;
 }
 .inputButton:hover {
   top: 2px;
-  -webkit-box-shadow: 0 3px 0 #2CADAD;
-  -moz-box-shadow: 0 3px 0 #2CADAD;
-  box-shadow: 0 3px 0 #2CADAD;
+  -webkit-box-shadow: 0 3px 0 #2cadad;
+  -moz-box-shadow: 0 3px 0 #2cadad;
+  box-shadow: 0 3px 0 #2cadad;
 }
 .inputButton:active {
   top: 5px;
@@ -67,14 +66,6 @@ input {
 
 .inputButton:disabled {
   opacity: 0.3;
-}
-
-.side-bar {
-    border-right: 2px solid #ebedf2;
-    background-color: #3CC;
-    color: #fff;
-    max-width: 20%;
-    height: 100vh;
 }
 
 .alert-error {
@@ -90,4 +81,14 @@ input {
   margin-left: auto;
   margin-right: auto;
   padding-left: 10px;
+}
+
+@media only screen and (min-width: 768px) {
+  .form-container {
+    margin: 50px auto;
+    width: 50%;
+    /* -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25);
+  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); */
+    /* box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25); */
+  }
 }
